tests/miniJava/pos/000853_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 . java ( ) ) java = 0 ; else System.out.println ( { } ) ; } }
