tests/miniJava/neg/005267_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] return ( ) { return 0 ; } }
